syntax="proto3";

import "google/protobuf/empty.proto";
import "Common/Utilities.proto";

option csharp_namespace="FCGR.Proto.Processing";
package processing;

message ProcessingParametersRequest
{
	bool is_processing_in_real_time=1;
	bytes crack_processor=2;
}

message FrameRequest
{
	bytes frame=1;
}
message FrameSerieRequest
{
	repeated bytes frames=1;
}
message CrackProcessorResultReply
{
	bytes crack_processor_result=1;
}

service FrameProcessingService
{
	rpc sendProcessingParameters(ProcessingParametersRequest) returns(google.protobuf.Empty);
	rpc sendFrame(stream FrameRequest) returns(stream CrackProcessorResultReply);
	rpc sendFrameSerie(FrameSerieRequest) returns(CrackProcessorResultReply);
}